@@ -43,6 +43,7 @@ export(compare_pairs)
 export(compare_vars)
 export(deduplicate_equivalence)
 export(get_inspect_pairs)
+export(greedy)
 export(identical)
 export(jaccard)
 export(jaro_winkler)
